js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-heritage-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
Parent
{
#
x
=
42
;
}
var
C
=
class
extends
Parent
{
m
(
)
{
something
.
#
x
}
}
;
